# L2G

./: .gitignore  MANIFEST.in  README  build_windows_wheels.ps1  pyproject.toml  requirements.txt  setup.py
cpp/: README.md  flt.cpp  flt.hpp  tlas.cpp  tlas.hpp
doc/: Makefile  make.bat
doc/source/: abbreviations.rst  applied_theory.rst  code_documentation.rst  conf.py  dev_tooltips.rst  digest.rst  examples.rst  faq.rst  index.rst  introduction.rst
examples/: annalytically_solve_inter_elm_normalization.py  embree_use.py  example_1.py  inres1.py  inres1_final.py  inres1_less.py  nf55_final.py  nf55_leveraged_to_cython.py  nf55_pure_python.py  shot_135011_run_7_t_399.927598s.eqdsk  synthetic_case.py  testing_elm_plm.py
l2g/: __init__.py
l2g/comp/: __init__.py  _data.py  _field_line_tracer.py  _field_line_tracer.pyi  _field_line_tracer.pyx  _io.py  _settings.py
l2g/comp/core/: __init__.py  _core.pyx  ext_flt_cpp.pxd  ext_wrapper.pxd  ext_wrapper.pyx
l2g/equil/: __init__.py  _eq.py  _eqdskg.py  _equilibrium.py  _iter.py  _owl_connection_graph.py
l2g/hlm/: elm_plm.py  general.py  ramp_down.py  steady_state.py
l2g/mesh/: __init__.py  _hdf5.py  _medcoupling.py  _vtk.py
l2g/mesh/medio/: __init__.py  attrs.py  read.py  write.py
l2g/misc/: heat_evaluations.py
l2g/plot/: __init__.py  _marching_squares.py  _plot_psi.py  _polygon.py
l2g/scripts/: flat.py  get_disruption_profile_from_imas.py  imas2eqdsk.py  mat2med.py  med2mat.py  mkDisruptionMovie.py  mkEqdskMovie.py  mkImasMovie.py  mkImasMovieFromPsi.py  plotEquilibriums.py  plotIP.py  plotMFlux.py  plot_summary_plasma_type.py  torbeam_mapper.py  torbeam_plotter.py
l2g/settings/: __init__.py  _settings.py
l2g/utils/: __init__.py  geom.py  meshio.py
l2g/workflow/: __init__.py  _case.py
tests/: test_bvh.py  test_embree.py  test_mesh_medio.py  test_module.py
