[project]
name = "l2g"
description = "A FLT (Field Line Tracing) suite"
readme = "README"
version = "2024dev"
authors = [
    {name="Gregor Simič", email="gregor.simic@iter.org"}
]
maintainers = [
    {name="Gregor Simič", email="gregor.simic@iter.org"}
]
keywords = ["flt"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Cython"
]
requires-python = ">=3.10"

[project.optional-dependencies]
tmp = [
    "imas",
    "medcoupling==9.13.0",
    "vtk",
    "matplotlib>=3.3.0",
    "numpy>=1.19.4",
    "scipy>=1.5.4",
]

[build-system]
requires = [
    "setuptools>68",
    "numpy>=1.19.4",
    "Cython>=0.29.21",
    "wheel",
]
build-backend = "setuptools.build_meta"
