[project]
name = "l2g"
description = "A FLT (Field Line Tracing) suite"
readme = "README"
version = "1.0.4.dev0"
authors = [
    {name="Gregor Simič", email="gregor.simic@iter.org"}
]
maintainers = [
    {name="Gregor Simič", email="gregor.simic@iter.org"}
]
keywords = ["flt"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development",
    "Topic :: Software Development :: Python Modules",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Cython",
    "Programming Language :: C++"
]
requires-python = ">=3.10"
dependencies = [
    "imas-python",
    "h5py",
    "vtk",
    "matplotlib>=3.3.0",
    "numpy>=1.19.4",
    "scipy>=1.5.4",
]

[build-system]
requires = [
    "setuptools>68",
    "numpy>=1.19.4",
    "Cython>=0.29.21",
    "wheel",
]
build-backend = "setuptools.build_meta"
